<resources>
    <string name="app_name">RemoCon</string>
    <string name="play_movie">Play</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="rating_select">Rating</string>
    <string name="rating_good">Good</string>
    <string name="normal">Not so bad</string>
    <string name="bad">Bad</string>
    <string name="dreadful">Dreadful</string>
    <string name="sizing_aspect">Sizing</string>
    <string name="play_fast">Play Fast</string>
    <string name="auto_aspect">Fill or Fit</string>
    <string name="aspect_next">Aspect++</string>
    <string name="aspect_prev">Aspect--</string>
    <string name="skip_movie">Skip</string>
    <string name="action_settings">Preferences</string>
    <string name="system">System</string>
    <string name="ko_mouse">Kick out mouse!</string>
    <string name="close">Close Player</string>
    <string name="lock">Lock!</string>
    <string name="shutdown">Shutdown PC</string>
    <string name="seek">Seek</string>
    <string name="seek_5">Seek 5 sec</string>
    <string name="seek_10">Seek 10 sec</string>
    <string name="step_back_5">Step back small</string>
    <string name="step_back_10">Step back large</string>
    <string name="seek_fwd_5">Step forward small</string>
    <string name="seek_fwd_10">Step forward large</string>
    <string name="super_fast">Super fast</string>
    <string name="show_slider">Show slider</string>
    <string name="id_server_address">Server Address</string>
    <string name="key_server_address">server_address</string>
</resources>
