<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:keepScreenOn="true"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
>
    <TextView
            android:id="@+id/play_movie_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_movie"
            android:textSize="30sp"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:gravity="center"
    />
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
    >
        <ImageButton
                android:id="@+id/play_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/svg_play"
                android:contentDescription="@string/play"
                android:scaleType="fitCenter"
        />
        <ImageButton
                android:id="@+id/play_fast_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/svg_play_fast"
                android:contentDescription="@string/play_fast"
                android:scaleType="fitCenter"
        />

        <ImageButton
                android:id="@+id/pause_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/svg_pause"
                android:contentDescription="@string/pause"
                android:scaleType="fitCenter"
        />
    </LinearLayout>

    <TextView
            android:id="@+id/skip_movie_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skip_movie"
            android:textSize="30sp"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:gravity="center"
    />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
    >
        <ImageButton
                android:id="@+id/prev_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/svg_prev"
                android:contentDescription="@string/prev"
                android:scaleType="fitCenter"
        />
        <ImageButton
                android:id="@+id/next_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/svg_next"
                android:contentDescription="@string/next"
                android:scaleType="fitCenter"
        />

    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_select"
            android:id="@+id/rating_label"
            android:textSize="30sp"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
    />
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
    >
        <ImageButton
                android:id="@+id/good_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/svg_rating_good"
                android:contentDescription="@string/rating_good"
                android:scaleType="fitCenter"
        />
        <ImageButton
                android:id="@+id/normal_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/svg_rating_normal"
                android:contentDescription="@string/normal"
                android:scaleType="fitCenter"
        />
        <ImageButton
                android:id="@+id/bad_button"
                android:layout_height="70dp"
                android:layout_width="70dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/svg_rating_bad"
                android:contentDescription="@string/bad"
                android:scaleType="fitCenter"
        />
        <ImageButton
                android:id="@+id/dreadful_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/svg_rating_dreadful"
                android:contentDescription="@string/dreadful"
                android:scaleType="fitCenter"
        />

    </LinearLayout>

    <TextView
            android:text="@string/sizing_aspect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sizing_label"
            android:textSize="30sp"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:gravity="center"
    />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
    >
        <ImageButton
                android:id="@+id/aspect_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/svg_aspect"
                android:contentDescription="@string/auto_aspect"
                android:scaleType="fitCenter"
        />
        <ImageButton
                android:id="@+id/aspect_next_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/svg_aspect_next"
                android:contentDescription="@string/aspect_next"
                android:scaleType="fitCenter"
        />
        <ImageButton
                android:id="@+id/aspect_prev_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/svg_aspect_prev"
                android:contentDescription="@string/aspect_prev"
                android:scaleType="fitCenter"
        />
    </LinearLayout>
</LinearLayout>